--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,42 @@ ESTILOS GENERALES
 ==================*/
 
 body {
-    height: 100vh;
+    min-height: 100vh;
     font-family: 'Poppins', sans-serif;
 }
 
 main {
     background-color: #eaeaea;
     color: rgb(80, 80, 80);
+    min-height: calc(100vh - 55.6px);
+}
+
+main.__main-login {
+    display:flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
+}
+
+small {
+    display: block;
+    padding-bottom: 10px;
+}
+
+/*==================
+NAVEGACION
+==================*/
+
+nav {
+    background-color: #fff;
+}
+
+nav div a:not(.navbar-brand) {
+    font-size: 13px;
+    margin-left: 15px;
 }
 
 /*==================
@@ -61,7 +86,9 @@ SECCION "LISTADO DE BANDERAS"
 }
 
 .__card-bandera:hover {
-    box-shadow: 0 19px 38px rgba(0,0,0,0.17), 0 15px 12px rgba(0,0,0,0.09);
+    box-shadow:
+        0 19px 38px rgba(0,0,0,0.17),
+        0 15px 12px rgba(0,0,0,0.09);
 }
 
 .__card-bandera > img {
@@ -72,3 +99,41 @@ SECCION "LISTADO DE BANDERAS"
     list-style-type: none;
     padding: 0;
 }
+
+/*==================
+LOGIN
+==================*/
+
+.__container-login {
+    display: flex;
+    background: pink;   
+}
+
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+  }
+  .form-signin .checkbox {
+    font-weight: 400;
+  }
+  .form-signin .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .form-signin .form-control:focus {
+    z-index: 2;
+  }
+  .form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+  
